--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,15 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.alwan.bangkitbfaa1"
+        applicationId "com.alwan.bangkitbfaa2"
         minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", 'BASE_URL', '"https://api.github.com/"')
+        buildConfigField("String", 'GITHUB_TOKEN', '"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"')
     }
 
     buildTypes {
@@ -40,6 +42,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -49,4 +52,9 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
 }
